--- a/contact.html
+++ b/contact.html
@@ -33,13 +33,13 @@
     </h2>
     <ul class="ulStyled">
         <li class="textCenter">
-            WhatsApp:
+            WhatsApp:3388433694
         </li>
         <li class="textCenter">
             Telefono:
         </li>
         <li class="textCenter">
-            Mail:
+            Mail:mattessich84@gmail.com
         </li>
     </ul>
 </body>
