nuevos progresos del proyecto

--- a/about.html
+++ b/about.html
@@ -10,15 +10,13 @@
 </head>
 
 <body class="aboutBody">
-    <h1 class="textCenter">
-        About
-    </h1>
+  
     <ul class="ulPages">
         <li>
             <a href="./home.html" class="pageHome">Home</a>
         </li>
         <li>
-            <a href="./social.html" class="pageHome">Social</a>
+            <a href="./social.html" class="pageHome">Nuestros Servicios</a>
         </li>
         <li>
             <a href="./contact.html" class="pageHome">Contact</a>
