--- a/home.html
+++ b/home.html
@@ -10,15 +10,13 @@
 </head>
 
 <body class="homeBody">
-    <h1 class="textCenter">
-        Home
-    </h1>
+   
     <ul class="ulPages">
         <li>
             <a href="./home.html" class="currentPage">Home</a>
         </li>
         <li>
-            <a href="./social.html" class="pageHome">Social</a>
+            <a href="./social.html" class="pageHome">Nuestros Servicios</a>
         </li>
         <li>
             <a href="./contact.html" class="pageHome">Contact</a>
@@ -30,10 +28,10 @@
 
     <ul class="ulTile">
         <li>
-            <img src="./images/tile1.png" alt="imagen" class="tileHome" />
+            <img src="./images/futbol-argentino.jpg" alt="imagen" class="tileHome" />
         </li>
         <li>
-            <img src="./images/tile2.png" alt="imagen" class="tileHome" />
+            <img src="./images/hbo.jpg" alt="imagen" class="tileHome" />
         </li>
         <li>
             <img src="./images/tile3.png" alt="imagen" class="tileHome" />
