--- a/social.html
+++ b/social.html
@@ -10,15 +10,13 @@
 </head>
 
 <body class="socialBody">
-    <h1 class="textCenter">
-        Social
-    </h1>
+
     <ul class="ulPages">
         <li>
             <a href="./home.html" class="pageHome">Home</a>
         </li>
         <li>
-            <a href="./social.html" class="currentPage">Social</a>
+            <a href="./social.html" class="currentPage">Nuestros Servicios</a>
         </li>
         <li>
             <a href="./contact.html" class="pageHome">Contact</a>
@@ -28,23 +26,6 @@
         </li>
     </ul>
 
-    <ul class="ulTile">
-        <li>
-            <img src="./images/tile1.png" alt="imagen" class="tileHome" />
-        </li>
-        <li>
-            <img src="./images/tile2.png" alt="imagen" class="tileHome" />
-        </li>
-        <li>
-            <img src="./images/tile3.png" alt="imagen" class="tileHome" />
-        </li>
-        <li>
-            <img src="./images/tile4.png" alt="imagen" class="tileHome" />
-        </li>
-        <li>
-            <img src="./images/tile5.png" alt="imagen" class="tileHome" />
-        </li>
-    </ul>
 
     <h2 class="textCenter">
         Algun texto sobre la aplicacion
