--- a/idex.html
+++ b/idex.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juan Mattessich</title>
-    <link rel="stylesheet" type="text/css" href="./styles.css">
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
 
 <body class="landingBody">
@@ -14,7 +14,7 @@
         <h1 class="titleLanding">
             Bienvenido a DEVEX
         </h1>
-        <a href="./home.html" class="landingA">
+        <a href="./secciones/home.html" class="landingA">
             <button class="buttonLanding">
                 Ingresar
             </button>
