--- a/secciones/about.html
+++ b/secciones/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" type="text/css" href="./styles.css">
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
 
 <body class="aboutBody">
@@ -16,7 +16,7 @@
             <a href="./home.html" class="pageHome">Home</a>
         </li>
         <li>
-            <a href="./social.html" class="pageHome">Nuestros Servicios</a>
+            <a href="./services.html" class="pageHome">Nuestros Servicios</a>
         </li>
         <li>
             <a href="./contact.html" class="pageHome">Contact</a>
