--- a/secciones/about.html
+++ b/secciones/about.html
@@ -26,8 +26,11 @@
         </li>
     </ul>
 
+    
     <h2 class="textCenter">
-        Algun texto sobre la aplicacion
+        somos una empresa de tv digital. 
+        Queremos garantizar la mejor atencion.
+    
     </h2>
 </body>
 
