--- a/secciones/home.html
+++ b/secciones/home.html
@@ -13,6 +13,8 @@
 
     <img src="../images/logoDevex.png" alt="logo devex" width="150px" height="150px">
 
+    <h1>DVEX</h1>
+
     <ul class="ulPages">
         <li>
             <a href="./home.html" class="currentPage">Home</a>
@@ -31,18 +33,23 @@
     <ul class="ulTile">
         <li>
             <img src="../images/futbol-argentino.jpg" alt="imagen" class="tileHome" />
+            <h3 class="tileText">Pack futbol</h3>
         </li>
         <li>
-            <img src="../images/hbo.jpg" alt="imagen" class="tileHome" />
+            <img src="../images/hbo1.jpeg" alt="imagen" class="tileHome" />
+            <h3 class="tileText">Pack HBO</h3>
         </li>
         <li>
             <img src="../images/logo-playboy-1920.jpg" alt="imagen" class="tileHome" />
+            <h3 class="tileText">Pack adultos</h3>
         </li>
         <li>
             <img src="../images/CINEYSERIES.png" alt="imagen" class="tileHome" />
+            <h3 class="tileText">Pack cine y series</h3>
         </li>
         <li>
             <img src="../images/LOGOTV.png" alt="imagen" class="tileHome" />
+            <h3 class="tileText">Pack TV</h3>
         </li>
     </ul>
 
@@ -50,17 +57,17 @@
 
         <li>
 
-            <h2 class="textFormat">
-                Instagram
-            </h2>
+            <a class="textFormat" href="https://www.instagram.com/juan.dvex/">
+                <img src="../images/intagram-vector.png" alt="whatsApp vector" width="50px" height="50px"/>
+            </a>
 
-            <h2 class="textFormat">
-                WhatsApp
-            </h2>
+            <a class="textFormat" href="https://wa.me/543388433694?text=Hola+Juan%2C+te+quer%C3%ADa+consultar+sobre+DVEX">
+                <img src="../images/whatsapp-vector.png" alt="whatsApp vector" width="50px" height="50px"/>
+            </a>
 
-            <h2 class="textFormat">
-                Telegram
-            </h2>
+            <a class="textFormat" href="https://web.telegram.org/k/#@Juanmatt">
+                <img src="../images/telegram-vector.png" alt="whatsApp vector" width="50px" height="50px"/>
+            </a>
         </li>
 
         <li>
