--- a/secciones/services.html
+++ b/secciones/services.html
@@ -7,10 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social</title>
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
 </head>
 
 <body class="socialBody">
-
     <ul class="ulPages">
         <li>
             <img src="../images/logoDevex.png" alt="logo devex" width="150px" height="150px">
@@ -37,25 +39,26 @@
 
     <ul class="ulTile">
 
-        <li>
-            <img src="../images/social-1.jpg" alt="" height="500px" weight="100%">
+        <li class="col-sm-12 col-md-6 col-lg-6">
+            <img src="../images/social-1.jpg" class="d-block w-100" alt="image">
         </li>
 
-        <li class="textBox">
+        <li class="col-sm-12 col-md-6 col-lg-6">
+            <div class="d-block w-100">
 
-            <h2 class="textLeft">
-                Devex es una plataforma de TV digital, Que significa esto?
-                Que no requiere de cableado ni conexiónes.
-                Es una aplicación que funciona en cualquier dispositivo Android,
-                ya sea TV, tablet o celular.
-                El servicio incluye:
-                más de 200 canales en HD, Pack Futbol, Pack Adultos
-                Pack HBO, y una sección de cine y series con acceso a los últimos estrenos.
+                <h2 class="textLeft">
+                    Devex es una plataforma de TV digital, Que significa esto?
+                    Que no requiere de cableado ni conexiónes.
+                    Es una aplicación que funciona en cualquier dispositivo Android,
+                    ya sea TV, tablet o celular.
+                    El servicio incluye:
+                    más de 200 canales en HD, Pack Futbol, Pack Adultos
+                    Pack HBO, y una sección de cine y series con acceso a los últimos estrenos.
 
-            </h2>
+                </h2>
+            </div>
         </li>
     </ul>
-
 </body>
 
 </html>
