--- a/secciones/contact.html
+++ b/secciones/contact.html
@@ -34,7 +34,20 @@
             <a href="./about.html" class="pageHome">About</a>
         </li>
     </ul>
-
+    <form action="#" method="GET">
+        <input type="text" placeholder="Nombre Completo" name="nombre">
+        <br><br>
+        <input type="text" placeholder="+549 (3388) 3388433694" name="tel">
+        <br><br>
+        <span>¿Suscribirse al Newsletter?</span>
+        <select name="newsletter">
+            <option value="V">SI</option>
+            <option value="F">NO</option>
+        </select>
+        <span>Receive news</span>
+        <input type="submit">
+    </form>
+    
     <h2 class="textCenter">
         Contactame por estos medios:
     </h2>
