--- a/secciones/home.html
+++ b/secciones/home.html
@@ -50,7 +50,7 @@
         </li>
         <li>
             <img src="../images/CINEYSERIES.png" alt="imagen" class="tileHome" />
-            <h3 class="tileText">Pack cine y series</h3>
+            <h3 class="tileText">cine y series</h3>
         </li>
         <li>
             <img src="../images/LOGOTV.png" alt="imagen" class="tileHome" />
